Tiny z-index bugfix

--- a/app/hiv/blueprints/patient/static/css/patient.css
+++ b/app/hiv/blueprints/patient/static/css/patient.css
@@ -16,5 +16,5 @@
     bottom: 0px;
     width: 130px; /* same as .patient-content left */
     background-color: #fff;
-    z-index: 1020;
+    z-index: -1;
 }
